<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/display_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="#FDF171"
            android:hint="@string/result"
            android:padding="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enter_first_value"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/display_result"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_first_value"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true" />

        <EditText
            android:id="@+id/enter_next_value"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/enter_first_value"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_next_value"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true" />

        <Button
            android:id="@+id/addition"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_next_value"
            android:layout_marginLeft="20dp"
            android:background="#0288D1"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="#ffff" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_next_value"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/addition"
            android:background="#0288D1"
            android:text="@string/subtract"
            android:textAllCaps="false"
            android:textColor="#ffff" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addition"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="#0288D1"
            android:text="@string/multiply"
            android:textAllCaps="false"
            android:textColor="#ffff" />

        <Button
            android:id="@+id/division"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtract"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/multiply"
            android:background="#0288D1"
            android:text="@string/division"
            android:textAllCaps="false"
            android:textColor="#ffff" />

        <Button
            android:id="@+id/clear_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/division"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Clear Data" />

        <Button
            android:id="@+id/bind_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clear_data"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Bind Service" />
    </RelativeLayout>

</RelativeLayout>